# rust-image-project

./: .gitignore  Cargo.toml  package-lock.json  package.json  webpack.config.js
public/: index.html  main.js
src/: lib.rs
