[package]
name = "rust-image-project"
version = "0.1.0"
edition = "2021"
description = "A description of your project"
repository = "https://github.com/rafael-a-g-n/rust-image-project"

[lib]
crate-type = ["cdylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
base64 = "0.21.2"
image = "0.24.6"

[dependencies.web-sys]
version = "0.3.64"
features = ["console"]